# polymarket-scheduled-event-pipieline

./: .gitignore  README.md  generate_liquidity_reversion_report.py  generate_report.py  pyproject.toml  requirements.txt  run_all_backtests.py  run_liquidity_reversion.py
config/: config.example.yaml  config.run100.yaml  config.run1000.yaml  market_sort_prompt.txt
data/processed/: scheduled_markets.json
data/raw/: histories.json  markets.json
polymarket_backtest/: backtest.py  config.py  fetch_markets.py  llm_filter.py  main.py  price_data.py  results.py
polymarket_backtester/: config.yaml
polymarket_backtester/analysis/: run_backtest.py  visualize.py
polymarket_backtester/data/: fetch_poly_data.py  fetch_whales.py  schema.py
polymarket_backtester/engine/: backtester.py  market_state.py  metrics.py  portfolio.py
polymarket_backtester/liquidity_reversion/: backtester.py  config.py  fill_simulator.py  impact_detector.py  position_manager.py  position_sizer.py  reporting.py
polymarket_backtester/strategies/: base.py  cross_market_arb.py  liquidity_reversion.py  resolution_catalyst.py  scheduled_momentum.py  whale_follow.py
src/polymarket_pipeline/: api.py  backtest.py  cli.py  config.py  dataset.py  filters.py  ingest.py  llm_filter.py  sports.py
tests/: test_backtest.py  test_filters.py
