[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-scheduled-event-pipeline"
version = "0.1.0"
description = "Pipeline + backtest for scheduled-event Polymarket contracts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "PyYAML>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
